Added IPv6 index

--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
         <div>Generate IP for <strong data-country-index>United States</strong></div>
         <button data-generate-ip-country-btn-el>Generate Country IP.</button>
         <pre data-ip-country-result>0.0.0.0</pre>
+        <pre data-ip-country-result-ipv6>0:0:0:0:0:0:0:0</pre>
     </body>
 </html>
